Fix bug where post titles were invisible for non admin users. Props RyanImel.
git-svn-id: https://plugins.svn.wordpress.org/ui-labs/trunk@415847 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/1-poststatuses.css
+++ b/1-poststatuses.css
@@ -29,7 +29,7 @@
 	padding:2px 5px;
 	color:#fff;
 	font-size:9px;
-	font-weight:normal;
+	font-weight:bold;
 	text-shadow:rgba(0,0,0,0.7) 0 -1px 0;
 	background:#870804;
 	background:-moz-linear-gradient(bottom,  #870804,  #c10c05);
@@ -49,7 +49,7 @@
 	padding:2px 5px;
 	color:#fff;
 	font-size:9px;
-	font-weight:normal;
+	font-weight:bold;
 	text-shadow:rgba(0,0,0,0.7) 0 -1px 0;
 	background:#277fac;
 	background:-moz-linear-gradient(bottom,  #277fac,  #3db0eb);
@@ -89,7 +89,7 @@
 	padding:2px 5px;
 	color:#fff;
 	font-size:9px;
-	font-weight:normal;
+	font-weight:bold;
 	text-shadow:rgba(0,0,0,1) 0 -1px 0;
 	background:#222;
 	background:-moz-linear-gradient(bottom,  #222,  #333);
@@ -128,6 +128,13 @@ is invisible - #SOMETHING */
 	z-index:10;
 }
 
+/* Remove invisibility cloak for non-linked
+post titles. (non-admin users) */
+.author-other strong,
+.alternate.author-other strong {
+	color:#555;
+}
+
 /* Fix ugly alignment bug introduced in WP3.2 */
 .widefat td {
 	padding-top:6px;
@@ -153,7 +160,7 @@ is invisible - #SOMETHING */
 	position:relative;
 	top:1px;
 	left:-2px;
-	padding-left:20px;
+	padding-left:14px;
 	background:url(images/postformat-quote.png) top left no-repeat;
 }
 
@@ -162,7 +169,7 @@ is invisible - #SOMETHING */
 	position:relative;
 	top:-1px;
 	left:-2px;
-	padding-left:20px;
+	padding-left:15px;
 	background:url(images/postformat-aside.png) top left no-repeat;
 }
 
@@ -180,7 +187,7 @@ is invisible - #SOMETHING */
 	position:relative;
 	top:0;
 	left:-2px;
-	padding-left:20px;
+	padding-left:14px;
 	background:url(images/postformat-status.png) top left no-repeat;
 }
 
@@ -189,6 +196,17 @@ is invisible - #SOMETHING */
 	position:relative;
 	top:1px;
 	left:-2px;
-	padding-left:20px;
+	padding-left:18px;
 	background:url(images/postformat-link.png) top left no-repeat;
+}
+
+/* Add spacing back in for non-admin users
+who have to see hyphens */
+.author-other.format-image	 .post-state-format,
+.author-other.format-quote .post-state-format,
+.author-other.format-aside .post-state-format,
+.author-other.format-gallery .post-state-format,
+.author-other.format-status .post-state-format,
+.author-other.format-link .post-state-format {
+	left:0;
 }
